Fix landscape layout on iPhone 8 Plus

--- a/src/styles/_intro.scss
+++ b/src/styles/_intro.scss
@@ -19,7 +19,7 @@
             text-align: center;
             a {
                 margin: 5px;
-                @media (min-width: $screen-sm) {
+                @media (min-width: $screen-lg) {
                     margin: 10px;
                 }
             }
@@ -42,6 +42,46 @@
 
         @media (min-width: $screen-lg) and (orientation : portrait) {
             padding-top: 10%;
+        }
+
+        .social {
+            display: inline-block;
+            background-color: transparent;
+            border-radius: 100%;
+            width: 44px;
+            height: 44px;
+            padding: 7px;
+            transition: all .5s;
+            img {
+                display: inline-block;
+                opacity: .55;
+                transition: all .5s;
+                max-width: 24px;
+                height: auto;
+            }
+            @media (min-width: $screen-sm) and (orientation : portrait) {
+                width: 68px;
+                height: 68px;
+                padding: 10px;
+                img {
+                    max-width: 48px;
+                }
+            }
+            @media (min-width: $screen-lg) and (orientation : landscape) {
+                width: 68px;
+                height: 68px;
+                padding: 10px;
+                img {
+                    max-width: 48px;
+                }
+            }
+            &:hover,
+            &:active {
+                background-color: $brand-grey-medium;
+                img {
+                    opacity: 1;
+                }
+            }
         }
     }
 }
